TRIB-2722 increase memory