@@ -148,8 +148,11 @@
                                 <jvmArgs>
                                     <jvmArg>-Xms1024m</jvmArg>
                                     <jvmArg>-Xmx1024m</jvmArg>
-                                    <jvmArg>-XX:MaxPermSize=3072m</jvmArg>
-                                    <jvmArg>-XX:PermSize=2048m</jvmArg>
+                                    <jvmArg>-XX:MaxPermSize=5120m</jvmArg>
+                                    <jvmArg>-XX:PermSize=4096m</jvmArg>
+                                    <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                    <jvmArg>-XX:+CMSPermGenSweepingEnabled</jvmArg>
+                                    <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                                 </jvmArgs>
                                 <compilerPlugins>
                                     <compilerPlugin>
